--- a/Holo/index.html
+++ b/Holo/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="full-screen" content="true" />
-    <meta name="screen-orientation" content="portrait" />
+    <meta name="screen-orientation" content="auto" />
     <meta name="x5-fullscreen" content="true" />
     <meta name="360-fullscreen" content="true" />
     <style>
@@ -91,6 +91,9 @@
     });
     xhr.send(null);
 </script>
+
+<!--other_libs_files_start-->
+<!--other_libs_files_end-->
 </body>
 
 </html>
